# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .gitignore  .zshrc  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  billw.zsh-theme  chezmoi.toml  install.sh  run_after_ghostty-config.sh  run_once_after_install-agent-tooling.sh.tmpl  run_once_before_install-packages.sh.tmpl  sync.py  zsh.sh
.agents/plans/: 2026-06-11-fix-agent-tooling-install.md  2026-06-11-install-pi-mcp-adapter.md  2026-06-11-modular-mcp-config.md  2026-06-11-pi-install.md  2026-06-11-replace-neovim-with-helix.md
alacritty/: alacritty.toml
claude/: settings.json
dot_claude/: settings.json
dot_config/alacritty/: alacritty.icns  alacritty.toml
dot_config/gh/: config.yml
dot_config/ghostty/: config  config.tmpl
dot_config/helix/: config.toml
dot_config/karabiner/: karabiner.json
dot_config/karabiner/automatic_backups/: karabiner_20250711.json
dot_config/mcp/: mcp.json
dot_config/zsh/: dot_zshrc  dot_zshrc.tmpl
dot_pi/agent/: settings.json
dot_pi/agent/themes/: monokai-spectrum-black.json
gh/: config.yml
git/: config
max/: activation.sh  pixi.toml
nvim/: lazy-lock.json
nvim/lua/plugins/: colorscheme.lua
templates/: pyproject.toml
uv/: uv-receipt.json
vscode/: README.md  extensions.txt  keybindings.json  settings.json
zsh/: .zshrc
